--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,14 +8,21 @@ set(CMAKE_CXX_STANDARD_REQUIRED ON)
 # Find OpenCL package
 find_package(OpenCL REQUIRED)
 
-# Include OpenCL headers
+# Include OpenCL headers and source directories
 include_directories(${OpenCL_INCLUDE_DIRS})
+include_directories(${CMAKE_SOURCE_DIR}/src)
 
-# Add executable
-add_executable(threshold_demo src/main.cpp)
+# Automatically collect all operation source files
+file(GLOB OP_SOURCES "src/ops/*.cpp")
+
+# Add executable with all source files
+add_executable(opencl_ops
+    src/main.cpp
+    ${OP_SOURCES}
+)
 
 # Link OpenCL library
-target_link_libraries(threshold_demo ${OpenCL_LIBRARIES})
+target_link_libraries(opencl_ops ${OpenCL_LIBRARIES})
 
 # Copy kernel files from src/cl to build/kernels directory
 file(GLOB KERNEL_FILES "${CMAKE_SOURCE_DIR}/src/cl/*.cl")
