--- a/config/config.ini
+++ b/config/config.ini
@@ -1,37 +1,26 @@
 # OpenCL Image Processing Framework Configuration
 
 [image]
+op_id = dilate3x3
 input = test_data/input.bin
 output = test_data/output.bin
-width = 1024
-height = 1024
+src_width = 1920
+src_height = 1080
+dst_width = 960
+dst_height = 720
 
-# Dilate 3x3 - Variant 0 (Basic)
-[kernel.dilate_v0]
-op_id = dilate3x3
-variant_id = v0
+# Variant 0 (Basic)
+[kernel.v0]
 kernel_file = src/dilate/cl/dilate0.cl
 kernel_function = dilate3x3
 work_dim = 2
 global_work_size = 1024,1024
 local_work_size = 16,16
 
-# Dilate 3x3 - Variant 1 (Optimized with Local Memory)
-[kernel.dilate_v1]
-op_id = dilate3x3
-variant_id = v1
+# Variant 1 (Optimized with Local Memory)
+[kernel.v1]
 kernel_file = src/dilate/cl/dilate1.cl
 kernel_function = dilate3x3_optimized
-work_dim = 2
-global_work_size = 1024,1024
-local_work_size = 16,16
-
-# Gaussian 5x5 - Variant 0 (Basic)
-[kernel.gaussian_v0]
-op_id = gaussian5x5
-variant_id = v0
-kernel_file = src/gaussian/cl/gaussian0.cl
-kernel_function = gaussian5x5
 work_dim = 2
 global_work_size = 1024,1024
 local_work_size = 16,16
