Refactor: Per-algorithm configs

--- a/config/dilate3x3.ini
+++ b/config/dilate3x3.ini
@@ -1,15 +1,16 @@
-# OpenCL Image Processing Framework Configuration
+# Dilate 3x3 Algorithm Configuration
+# Morphological dilation with 3x3 structuring element
+# Note: op_id is auto-derived from filename (dilate3x3.ini -> op_id = dilate3x3)
 
 [image]
-op_id = dilate3x3
 input = test_data/input.bin
 output = test_data/output.bin
 src_width = 1920
 src_height = 1080
-dst_width = 960
-dst_height = 720
+dst_width = 1920
+dst_height = 1080
 
-# Variant 0 (Basic)
+# Variant 0: Basic implementation
 [kernel.v0]
 kernel_file = src/dilate/cl/dilate0.cl
 kernel_function = dilate3x3
@@ -17,7 +18,7 @@ work_dim = 2
 global_work_size = 1920,1088
 local_work_size = 16,16
 
-# Variant 1 (Optimized with Local Memory)
+# Variant 1: Optimized with local memory
 [kernel.v1]
 kernel_file = src/dilate/cl/dilate1.cl
 kernel_function = dilate3x3_optimized
