--- a/config/gaussian5x5.ini
+++ b/config/gaussian5x5.ini
@@ -10,6 +10,11 @@ src_height = 1080
 dst_width = 1920
 dst_height = 1080
 
+kernel_x_file = test_data/gaussian5x5/kernel_x.bin
+kernel_y_file = test_data/gaussian5x5/kernel_y.bin
+cl_buffer_type = READ_ONLY, READ_ONLY, READ_ONLY
+cl_buffer_size = 5, 5, 1920 * 1080 * 4
+
 # Variant 0: Basic implementation
 [kernel.v0]
 kernel_file = src/gaussian/cl/gaussian0.cl
