--- a/config/gaussian5x5.ini
+++ b/config/gaussian5x5.ini
@@ -10,10 +10,29 @@ src_height = 1080
 dst_width = 1920
 dst_height = 1080
 
-kernel_x_file = test_data/gaussian5x5/kernel_x.bin
-kernel_y_file = test_data/gaussian5x5/kernel_y.bin
-cl_buffer_type = READ_ONLY, READ_ONLY, READ_ONLY
-cl_buffer_size = 5, 5, 1920 * 1080 * 4
+# Custom buffer 0: temporary global buffer for intermediate results (300 MB)
+# This will be kernel arg 2 (after input=0, output=1)
+[buffer.tmp_global]
+type = READ_WRITE
+size_bytes = 314572800
+
+# Note: width (arg 3) and height (arg 4) are set as scalars in _ref.c
+
+# Custom buffer 1: horizontal Gaussian weights (5 floats)
+# This will be kernel arg 5
+[buffer.kernel_x]
+type = READ_ONLY
+data_type = float
+num_elements = 5
+source_file = test_data/gaussian5x5/kernel_x.bin
+
+# Custom buffer 2: vertical Gaussian weights (5 floats)
+# This will be kernel arg 6
+[buffer.kernel_y]
+type = READ_ONLY
+data_type = float
+num_elements = 5
+source_file = test_data/gaussian5x5/kernel_y.bin
 
 # Variant 0: Basic implementation
 [kernel.v0]
