docs: Update architecture and algorithm documentation

--- a/config/gaussian5x5.ini
+++ b/config/gaussian5x5.ini
@@ -3,8 +3,8 @@
 # Note: op_id is auto-derived from filename (gaussian5x5.ini -> op_id = gaussian5x5)
 
 [image]
-input = test_data/input.bin
-output = test_data/output.bin
+input = test_data/gaussian5x5/input.bin
+output = test_data/gaussian5x5/output.bin
 src_width = 1920
 src_height = 1080
 dst_width = 1920
@@ -15,8 +15,6 @@ dst_height = 1080
 [buffer.tmp_global]
 type = READ_WRITE
 size_bytes = 314572800
-
-# Note: width (arg 3) and height (arg 4) are set as scalars in _ref.c
 
 # Custom buffer 1: horizontal Gaussian weights (5 floats)
 # This will be kernel arg 5
