--- a/config/dilate3x3.ini
+++ b/config/dilate3x3.ini
@@ -3,8 +3,8 @@
 # Note: op_id is auto-derived from filename (dilate3x3.ini -> op_id = dilate3x3)
 
 [image]
-input = test_data/input.bin
-output = test_data/output.bin
+input = test_data/dilate3x3/input.bin
+output = test_data/dilate3x3/output.bin
 src_width = 1920
 src_height = 1080
 dst_width = 1920
