add: new cl optimization

--- a/config/gaussian5x5.ini
+++ b/config/gaussian5x5.ini
@@ -34,8 +34,18 @@ source_file = test_data/gaussian5x5/kernel_y.bin
 
 # Variant 0: Basic implementation
 [kernel.v0]
+host_type = standard   # or custom_host_api (default is standard)
 kernel_file = src/gaussian/cl/gaussian0.cl
 kernel_function = gaussian5x5
+work_dim = 2
+global_work_size = 1920,1088
+local_work_size = 16,16
+
+# Variant 1: Optimized with local memory
+[kernel.v1]
+host_type = cl_extension
+kernel_file = src/gaussian/cl/gaussian1.cl
+kernel_function = gaussian5x5_optimized
 work_dim = 2
 global_work_size = 1920,1088
 local_work_size = 16,16
