--- a/config/gaussian5x5.ini
+++ b/config/gaussian5x5.ini
@@ -32,18 +32,18 @@ data_type = float
 num_elements = 5
 source_file = test_data/gaussian5x5/kernel_y.bin
 
-# Variant 0: Basic implementation
+# Variant 0: Basic implementation using standard OpenCL API
 [kernel.v0]
-host_type = standard   # or custom_host_api (default is standard)
+host_type = standard   # Options: "standard" (default) or "cl_extension"
 kernel_file = src/gaussian/cl/gaussian0.cl
 kernel_function = gaussian5x5
 work_dim = 2
 global_work_size = 1920,1088
 local_work_size = 16,16
 
-# Variant 1: Optimized with local memory
+# Variant 1: Optimized with local memory using custom CL extension API
 [kernel.v1]
-host_type = cl_extension
+host_type = cl_extension   # Uses custom CL extension API framework
 kernel_file = src/gaussian/cl/gaussian1.cl
 kernel_function = gaussian5x5_optimized
 work_dim = 2
