feat: add kernel_variant field to support multiple kernel signatures per algorithm

--- a/config/gaussian5x5.ini
+++ b/config/gaussian5x5.ini
@@ -14,7 +14,11 @@ dst_height = 1080
 # This will be kernel arg 2 (after input=0, output=1)
 [buffer.tmp_global]
 type = READ_WRITE
-size_bytes = 314572800
+size_bytes = 400000
+
+[buffer.tmp_global2]
+type = READ_WRITE
+size_bytes = 512000
 
 # Custom buffer 1: horizontal Gaussian weights (5 floats)
 # This will be kernel arg 5
@@ -35,6 +39,7 @@ source_file = test_data/gaussian5x5/kernel_y.bin
 # Variant 0: Basic implementation using standard OpenCL API
 [kernel.v0]
 host_type = standard   # Options: "standard" (default) or "cl_extension"
+kernel_variant = 0     # Signature: (input, output, width, height, kernel_x, kernel_y)
 kernel_file = src/gaussian/cl/gaussian0.cl
 kernel_function = gaussian5x5
 work_dim = 2
@@ -44,8 +49,19 @@ local_work_size = 16,16
 # Variant 1: Optimized with local memory using custom CL extension API
 [kernel.v1]
 host_type = cl_extension   # Uses custom CL extension API framework
+kernel_variant = 1         # Signature: (input, output, tmp_buffer, tmp_buffer_size, width, height, kernel_x, kernel_y)
 kernel_file = src/gaussian/cl/gaussian1.cl
 kernel_function = gaussian5x5_optimized
+work_dim = 2
+global_work_size = 1920,1088
+local_work_size = 16,16
+
+# Variant 2: Two-pass separable convolution using custom CL extension API
+[kernel.v2]
+host_type = cl_extension   # Uses custom CL extension API framework
+kernel_variant = 2         # Signature: (input, output, tmp_buffer, tmp_buffer_size, tmp_buffer2, tmp_buffer_size2, width, height, kernel_x, kernel_y)
+kernel_file = src/gaussian/cl/gaussian2.cl
+kernel_function = gaussian5x5_horizontal
 work_dim = 2
 global_work_size = 1920,1088
 local_work_size = 16,16
