--- a/config/dilate3x3.ini
+++ b/config/dilate3x3.ini
@@ -11,7 +11,7 @@ dst_height = 1080
 
 # Variant 0: Basic implementation
 [kernel.v0]
-kernel_file = src/dilate/cl/dilate0.cl
+kernel_file = examples/dilate/cl/dilate0.cl
 kernel_function = dilate3x3
 work_dim = 2
 global_work_size = 1920,1088
@@ -19,7 +19,7 @@ local_work_size = 16,16
 
 # Variant 1: Optimized with local memory
 [kernel.v1]
-kernel_file = src/dilate/cl/dilate1.cl
+kernel_file = examples/dilate/cl/dilate1.cl
 kernel_function = dilate3x3_optimized
 work_dim = 2
 global_work_size = 1920,1088
