feat: restructure input data to support multiple images via config/inputs.ini

--- a/config/dilate3x3.ini
+++ b/config/dilate3x3.ini
@@ -1,17 +1,16 @@
 # Dilate 3x3 Algorithm Configuration
 # Morphological dilation with 3x3 structuring element
 # Note: op_id is auto-derived from filename (dilate3x3.ini -> op_id = dilate3x3)
+# Note: Input images are configured in config/inputs.ini
 
-[image]
-input = test_data/dilate3x3/input.bin
-src_width = 1920
-src_height = 1080
+[output]
 dst_width = 1920
 dst_height = 1080
+dst_stride = 5760
 
 # Variant 0: Basic implementation
 [kernel.v0]
-kernel_file = examples/dilate/cl/dilate0.cl
+kernel_file = examples/dilate3x3/cl/dilate0.cl
 kernel_function = dilate3x3
 work_dim = 2
 global_work_size = 1920,1088
@@ -19,7 +18,7 @@ local_work_size = 16,16
 
 # Variant 1: Optimized with local memory
 [kernel.v1]
-kernel_file = examples/dilate/cl/dilate1.cl
+kernel_file = examples/dilate3x3/cl/dilate1.cl
 kernel_function = dilate3x3_optimized
 work_dim = 2
 global_work_size = 1920,1088
