--- a/config/gaussian5x5.ini
+++ b/config/gaussian5x5.ini
@@ -1,11 +1,9 @@
 # Gaussian 5x5 Algorithm Configuration
 # Gaussian blur filter with 5x5 kernel
 # Note: op_id is auto-derived from filename (gaussian5x5.ini -> op_id = gaussian5x5)
+# Note: Input images are configured in config/inputs.ini
 
-[image]
-input = test_data/gaussian5x5/input.bin
-src_width = 1920
-src_height = 1080
+[output]
 dst_width = 1920
 dst_height = 1080
 
@@ -39,7 +37,7 @@ source_file = test_data/gaussian5x5/kernel_y.bin
 # kernel_variant is auto-derived from section name (v0 -> variant 0)
 [kernel.v0]
 host_type = standard   # Options: "standard" (default) or "cl_extension"
-kernel_file = examples/gaussian/cl/gaussian0.cl
+kernel_file = examples/gaussian5x5/cl/gaussian0.cl
 kernel_function = gaussian5x5
 work_dim = 2
 global_work_size = 1920,1088
@@ -49,7 +47,7 @@ local_work_size = 16,16
 # kernel_variant is auto-derived from section name (v1 -> variant 1)
 [kernel.v1]
 host_type = cl_extension   # Uses custom CL extension API framework
-kernel_file = examples/gaussian/cl/gaussian1.cl
+kernel_file = examples/gaussian5x5/cl/gaussian1.cl
 kernel_function = gaussian5x5_optimized
 work_dim = 2
 global_work_size = 1920,1088
@@ -59,7 +57,7 @@ local_work_size = 16,16
 # kernel_variant is auto-derived from section name (v2 -> variant 2)
 [kernel.v2]
 host_type = cl_extension   # Uses custom CL extension API framework
-kernel_file = examples/gaussian/cl/gaussian2.cl
+kernel_file = examples/gaussian5x5/cl/gaussian2.cl
 kernel_function = gaussian5x5_horizontal
 work_dim = 2
 global_work_size = 1920,1088
