feat: add per-algorithm input image selection and fix buffer initialization
  This commit introduces support for algorithm-specific input image
  configuration and fixes a critical uninitialized memory bug in the
  config parser.

--- a/config/dilate3x3.ini
+++ b/config/dilate3x3.ini
@@ -1,7 +1,9 @@
 # Dilate 3x3 Algorithm Configuration
 # Morphological dilation with 3x3 structuring element
 # Note: op_id is auto-derived from filename (dilate3x3.ini -> op_id = dilate3x3)
-# Note: Input images are configured in config/inputs.ini
+
+[input]
+input_image_id = image_1
 
 [output]
 dst_width = 1920
