--- a/config/gaussian5x5.ini
+++ b/config/gaussian5x5.ini
@@ -1,7 +1,9 @@
 # Gaussian 5x5 Algorithm Configuration
 # Gaussian blur filter with 5x5 kernel
 # Note: op_id is auto-derived from filename (gaussian5x5.ini -> op_id = gaussian5x5)
-# Note: Input images are configured in config/inputs.ini
+
+[input]
+input_image_id = image_2
 
 [output]
 dst_width = 1920
